<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="?actionBarSize"
                android:layout_height="match_parent"
                android:background="@color/transparent_background"
                android:src="@drawable/ic_baseline_back" />

            <TextView
                android:id="@+id/title"
                style="@style/ToolbarTextStyle"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:minHeight="?actionBarSize"
                android:paddingEnd="20dp" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/waste_categories"
                    android:textSize="18dp" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/waste_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:selectionRequired="false"
                    app:singleSelection="false">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/paper"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="true"
                        android:text="@string/paper" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/glass"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="true"
                        android:text="@string/glass" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/plastic"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="true"
                        android:text="@string/plastic" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/metal"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="true"
                        android:text="@string/metal" />

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <Switch
                    android:id="@+id/all_selected_categories_button"
                    style="@style/SwitchStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/all_selected_categories"
                    android:theme="@style/SwitchStyle" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <Button
                    android:id="@+id/auto_determination_button"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_determination"
                    android:theme="@style/ButtonStyle" />

                <Button
                    android:id="@+id/apply_button"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_filters"
                    android:theme="@style/ButtonStyle" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>