<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.cleanslate.ui.view.MainFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_navigation_main_to_navigation_point_information"
            app:destination="@id/navigation_point_information" />
        <action
            android:id="@+id/action_navigation_main_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_main_to_navigation_filters"
            app:destination="@id/navigation_filters" />
    </fragment>

    <fragment
        android:id="@+id/navigation_point_information"
        android:name="com.example.cleanslate.ui.view.PointInformationFragment"
        tools:layout="@layout/fragment_point_information">
        <action
            android:id="@+id/action_navigation_point_information_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.cleanslate.ui.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_navigation_settings_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>

    <fragment
        android:id="@+id/navigation_filters"
        android:name="com.example.cleanslate.ui.view.FiltersFragment"
        android:label="@string/filters"
        tools:layout="@layout/fragment_filters">
        <action
            android:id="@+id/action_navigation_filters_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>

</navigation>