<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="?actionBarSize"
                android:layout_height="match_parent"
                android:background="@color/transparent_background"
                android:src="@drawable/ic_baseline_back" />

            <TextView
                android:id="@+id/title"
                style="@style/ToolbarTextStyle"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:minHeight="?actionBarSize"
                android:paddingEnd="20dp" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/language_setting"
                    android:textSize="18dp" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/language_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/english_language"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="false"
                        android:text="@string/en_lang_setting"
                        android:textSize="16dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/russian_language"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="false"
                        android:text="@string/ru_lang_setting"
                        android:textSize="16dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/system_language"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="true"
                        android:text="@string/system_lang_setting"
                        android:textSize="16dp" />

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/theme_setting"
                    android:textSize="18dp" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/theme_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/light_theme"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="false"
                        android:text="@string/light_theme_setting"
                        android:textSize="16dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/night_theme"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="false"
                        android:text="@string/night_theme_setting"
                        android:textSize="16dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/system_theme"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="true"
                        android:text="@string/system_theme_setting"
                        android:textSize="16dp" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>