<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10sp"
            android:paddingEnd="20sp">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="?actionBarSize"
                android:layout_height="match_parent"
                android:stateListAnimator="@null"
                android:theme="@style/ToolbarButton"
                android:src="@drawable/ic_baseline_arrow_back"/>

            <TextView
                android:id="@+id/title"
                style="@style/ToolbarStyle"
                android:layout_width="0sp"
                android:layout_height="?actionBarSize"
                android:layout_weight="1"
                android:minHeight="?actionBarSize"/>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20sp">

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12sp"
                    android:text="@string/waste_categories" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/waste_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:selectionRequired="false" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_marginTop="6sp"
                    android:layout_marginBottom="6sp" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12sp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/address"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:layout_marginBottom="8sp"
                    android:background="@drawable/secondary_background"
                    android:clickable="false"
                    android:paddingStart="12sp"
                    android:paddingTop="4sp"
                    android:paddingEnd="12sp"
                    android:paddingBottom="6sp" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12sp"
                    android:text="@string/schedule" />

                <TextView
                    android:id="@+id/schedule"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:layout_marginBottom="8sp"
                    android:background="@drawable/secondary_background"
                    android:clickable="false"
                    android:paddingStart="12sp"
                    android:paddingTop="4sp"
                    android:paddingEnd="12sp"
                    android:paddingBottom="6sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_marginTop="6sp"
                    android:layout_marginBottom="6sp" />

                <TextView
                    style="@style/TextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12sp"
                    android:text="@string/contacts"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:paddingStart="12sp"
                    android:paddingTop="2sp"
                    android:paddingEnd="12sp"
                    android:paddingBottom="2sp"
                    android:textSize="@dimen/plain" />

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="12sp"
                    android:paddingTop="2sp"
                    android:paddingEnd="12sp"
                    android:paddingBottom="2sp"
                    android:textSize="@dimen/plain" />

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8sp"
                    android:paddingStart="12sp"
                    android:paddingTop="2sp"
                    android:paddingEnd="12sp"
                    android:paddingBottom="4sp"
                    android:textSize="@dimen/plain" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_marginTop="6sp"
                    android:layout_marginBottom="6sp" />

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12sp"
                    android:text="12км"
                    android:textStyle="bold" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_marginTop="6sp"
                    android:layout_marginBottom="6sp" />

                <Button
                    android:id="@+id/third_party_map_button"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_in_maps"
                    android:theme="@style/ButtonStyle" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>